--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-react": "^7.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-responsive-modal": "^6.0.0",
